vehicle/orderSystem/src/main/java/com/example/vehicle/exception/invalid/SerializeException.java
package com.example.vehicle.exception.invalid;

import com.example.vehicle.exception.CustomException;
import com.example.vehicle.exception.ErrorCode;

public class SerializeException extends CustomException {
    public SerializeException() {
        super(ErrorCode.SERIALIZE_ERROR);
    }
}
